# ghc-debug

./: cabal.project  mk-sdist  upload-docs
client/: CHANGELOG.md  ghc-debug-client.cabal
client/src/GHC/Debug/: Client.hs  CostCentres.hs  Count.hs  Fragmentation.hs  GML.hs  ObjectEquiv.hs  ParTrace.hs  Profile.hs  Retainers.hs  Snapshot.hs  Strings.hs  Thunks.hs  Trace.hs  TypePointsFrom.hs
client/src/GHC/Debug/Client/: Query.hs  RequestCache.hs
client/src/GHC/Debug/Client/Monad/: Simple.hs
client/src/GHC/Debug/Profile/: Types.hs
common/: CHANGELOG.md  ghc-debug-common.cabal
common/src/GHC/Debug/: Decode.hs  Types.hs
common/src/GHC/Debug/Types/: Closures.hs  Graph.hs  Ptr.hs  Version.hs
convention/: CHANGELOG.md  ghc-debug-convention.cabal
docs/data/: 05-fragmentation.md  07-internals.md
ghc-debug-brick/: CHANGELOG.md  ghc-debug-brick.cabal
ghc-debug-brick/src/: Common.hs  IOTree.hs  Lib.hs  Main.hs  Model.hs
stub/: CHANGELOG.md  ghc-debug-stub.cabal
stub/cbits/: stub.cpp  trace.h
test/: StringAnalysis.hs  Test.hs  ghc-debugger.cabal
test/test/: Server.hs  SystemTest.hs
zdocs-heap/: analyses.hs  zdocs-heap.cabal
