cabal-version:      2.4
name:               zdocs-heap
version:            0.0.1

author:             Max Ulidtko
maintainer:         ulidtko@gmail.com

executable zdocs-heap
  main-is:          analyses.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  default-extensions: TupleSections
  build-depends:    base >=4.16,
                    ghc-debug-client, ghc-debug-common,

                    process, time,

                    bytestring, containers, text, ghc
